--- a/.travis.yml
+++ b/.travis.yml
@@ -9,21 +9,14 @@ node_js:
   - '0.10'
 before_install: >-
   if [[ `npm --version` == 1* ]];
-  then node -e "
-    var fs = require('fs');
-    var pkg = JSON.parse(fs.readFileSync('package.json', 'utf8'));
-    var devDeps = pkg.devDependencies;
-    delete devDeps['@shinnn/eslint-config-node-legacy'];
-    delete devDeps.eslint;
-    fs.writeFileSync('package.json', JSON.stringify(pkg));"
+  then npm uninstall --save-dev @shinnn/eslint-config-node-legacy eslint;
   fi;
 script:
   - if [[ `node --version` != v0.* ]]; then npm run-script pretest; fi;
   - npm run-script coverage
 after_script: >-
   if [[ `node --version` != v0.* ]];
-  then npm install istanbul-coveralls &&
-       node node_modules/.bin/istanbul-coveralls;
+  then npm install istanbul-coveralls && node node_modules/.bin/istanbul-coveralls;
   fi;
 notifications:
   email: false
