--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,14 +8,7 @@ environment:
     - nodejs_version: '0.10'
 install:
   - ps: Install-Product node $env:nodejs_version
-  - >-
-      node -e "
-      var fs = require('fs');
-      var pkg = JSON.parse(fs.readFileSync('package.json', 'utf8'));
-      var devDeps = pkg.devDependencies;
-      delete devDeps['@shinnn/eslint-config-node-legacy'];
-      delete devDeps.eslint;
-      fs.writeFileSync('package.json', JSON.stringify(pkg));"
+  - npm uninstall --save-dev @shinnn/eslint-config-node-legacy eslint
   - npm install
 build: off
 test_script:
