--- a/.travis.yml
+++ b/.travis.yml
@@ -3,20 +3,10 @@ git:
 branches:
   except: /^v\d/
 language: node_js
-node_js:
-  - node
-  - '0'
-  - '0.10'
-before_install: >-
-  if [[ `npm --version` == 1* ]];
-  then npm uninstall --save-dev @shinnn/eslint-config-node-legacy eslint;
-  fi;
-script:
-  - if [[ `node --version` != v0.* ]]; then npm run-script pretest; fi;
-  - npm run-script coverage
-after_script: >-
-  if [[ `node --version` != v0.* ]];
-  then npm install istanbul-coveralls && node node_modules/.bin/istanbul-coveralls;
-  fi;
+node_js: node
+script: npm run-script pretest && npm run-script coverage
+after_script:
+  - npm install istanbul-coveralls
+  - node node_modules/.bin/istanbul-coveralls
 notifications:
   email: false
