--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "shinnn/load-request-from-cwd-or-npm",
   "author": "Shinnosuke Watanabe (https://github.com/shinnn)",
   "scripts": {
-    "pretest": "eslint --fix --config @shinnn/node index.js test",
+    "pretest": "eslint --config=@shinnn/node --fix --format=codeframe index.js test",
     "test": "node test/test.js && node test/test-broken-npm.js && node test/test-no-npm.js",
     "coverage": "istanbul cover --dir=coverage/test test/test.js && istanbul cover --dir=coverage/test-broken-npm test/test-broken-npm.js && istanbul cover --dir=coverage/test-no-npm test/test-no-npm.js && istanbul report"
   },
@@ -39,11 +39,11 @@
     "then"
   ],
   "dependencies": {
-    "load-from-cwd-or-npm": "^2.0.1"
+    "load-from-cwd-or-npm": "^2.2.1"
   },
   "devDependencies": {
-    "@shinnn/eslint-config-node": "^3.0.0",
-    "eslint": "^3.19.0",
+    "@shinnn/eslint-config-node": "^4.0.0",
+    "eslint": "^4.1.1",
     "istanbul": "^0.4.5",
     "tape": "^4.6.3"
   }
