--- a/package.json
+++ b/package.json
@@ -1,50 +1,53 @@
 {
-  "name": "load-request-from-cwd-or-npm",
-  "version": "2.0.0",
-  "description": "Load `request` module from either CWD or npm CLI directory",
-  "repository": "shinnn/load-request-from-cwd-or-npm",
-  "author": "Shinnosuke Watanabe (https://github.com/shinnn)",
-  "scripts": {
-    "pretest": "eslint --config=@shinnn/node --fix --format=codeframe index.js test",
-    "test": "node test/test.js && node test/test-broken-npm.js && node test/test-no-npm.js",
-    "coverage": "istanbul cover --dir=coverage/test test/test.js && istanbul cover --dir=coverage/test-broken-npm test/test-broken-npm.js && istanbul cover --dir=coverage/test-no-npm test/test-no-npm.js && istanbul report"
-  },
-  "license": "ISC",
-  "files": [
-    "index.js"
-  ],
-  "keywords": [
-    "load",
-    "resolve",
-    "require",
-    "fallback",
-    "failsafe",
-    "cwd",
-    "npm",
-    "module",
-    "compare",
-    "comparison",
-    "find",
-    "request",
-    "http",
-    "https",
-    "get",
-    "put",
-    "patch",
-    "post",
-    "head",
-    "delete",
-    "promise",
-    "promises",
-    "then"
-  ],
-  "dependencies": {
-    "load-from-cwd-or-npm": "^2.2.1"
-  },
-  "devDependencies": {
-    "@shinnn/eslint-config-node": "^4.0.0",
-    "eslint": "^4.1.1",
-    "istanbul": "^0.4.5",
-    "tape": "^4.6.3"
-  }
+	"name": "load-request-from-cwd-or-npm",
+	"version": "2.0.0",
+	"description": "Load `request` module from either CWD or npm CLI directory",
+	"repository": "shinnn/load-request-from-cwd-or-npm",
+	"author": "Shinnosuke Watanabe (https://github.com/shinnn)",
+	"scripts": {
+		"pretest": "eslint --fix --format=codeframe index.js test/test.js",
+		"test": "nyc node test/test.js"
+	},
+	"license": "ISC",
+	"files": [
+		"index.js"
+	],
+	"keywords": [
+		"load",
+		"resolve",
+		"require",
+		"fallback",
+		"failsafe",
+		"cwd",
+		"npm",
+		"module",
+		"compare",
+		"comparison",
+		"find",
+		"request",
+		"http",
+		"https",
+		"get",
+		"put",
+		"patch",
+		"post",
+		"head",
+		"delete",
+		"promise",
+		"promises",
+		"then"
+	],
+	"dependencies": {
+		"load-from-cwd-or-npm": "^2.2.1"
+	},
+	"devDependencies": {
+		"@shinnn/eslint-config-node": "^5.0.0",
+		"clear-module": "^2.1.0",
+		"eslint": "^4.12.1",
+		"nyc": "^11.4.0",
+		"tape": "^4.8.0"
+	},
+	"eslintConfig": {
+		"extends": "@shinnn/node"
+	}
 }
