--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "load-request-from-cwd-or-npm",
-	"version": "2.0.1",
+	"version": "3.0.0",
 	"description": "Load `request` module from either CWD or npm CLI directory",
 	"repository": "shinnn/load-request-from-cwd-or-npm",
 	"author": "Shinnosuke Watanabe (https://github.com/shinnn)",
 	"scripts": {
-		"pretest": "eslint --fix --format=codeframe index.js test/test.js",
+		"pretest": "eslint --fix --format=codeframe .",
 		"test": "nyc node test/test.js"
 	},
 	"license": "ISC",
@@ -43,9 +43,9 @@
 	"devDependencies": {
 		"@shinnn/eslint-config-node": "^5.0.0",
 		"clear-module": "^2.1.0",
-		"eslint": "^4.12.1",
-		"nyc": "^11.4.0",
-		"tape": "^4.8.0"
+		"eslint": "^4.19.1",
+		"nyc": "^12.0.2",
+		"tape": "^4.9.1"
 	},
 	"eslintConfig": {
 		"extends": "@shinnn/node"
