--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
 	"description": "Load `request` module from either CWD or npm CLI directory",
 	"repository": "shinnn/load-request-from-cwd-or-npm",
 	"author": "Shinnosuke Watanabe (https://github.com/shinnn)",
+	"license": "ISC",
 	"scripts": {
-		"pretest": "eslint --fix --format=codeframe .",
+		"pretest": "eslint .",
 		"test": "nyc node test/test.js"
 	},
-	"license": "ISC",
 	"files": [
 		"index.js"
 	],
@@ -41,13 +41,17 @@
 		"load-from-cwd-or-npm": "^3.0.0"
 	},
 	"devDependencies": {
-		"@shinnn/eslint-config-node": "^5.0.0",
-		"clear-module": "^2.1.0",
-		"eslint": "^4.19.1",
-		"nyc": "^12.0.2",
+		"@shinnn/eslint-config": "^6.8.0",
+		"clear-module": "^3.0.0",
+		"eslint": "^5.8.0",
+		"nyc": "^13.1.0",
+		"nyc-config-common": "^1.0.1",
 		"tape": "^4.9.1"
 	},
 	"eslintConfig": {
-		"extends": "@shinnn/node"
+		"extends": "@shinnn"
+	},
+	"nyc": {
+		"extends": "nyc-config-common"
 	}
 }
